[project]
name = "zm10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nakashima-wataru", email = "seidannnw@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
zm10 = "zm10.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
